Homologa el Conjunto de Evaluación (II)

--- a/notebooks/01_eda_understanding.ipynb
+++ b/notebooks/01_eda_understanding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "id": "34d64bbb",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "id": "230abfdf",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "4  ansiedad  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "id": "ed6bdcf5",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "id": "c02b8812",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "id": "5c62e8b7",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "id": "a1582a6d",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "4  reposicion segun indicaciones de tratante 2 examen fisico gral. y ginecologico peso talla presion arterial pulso tem...  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "id": "d12c2a03",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "id": "f3613818",
    "metadata": {},
    "outputs": [
@@ -507,25 +507,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duplicados exactos: 29 / 3155\n",
-      "Dataset sin duplicados: (3126, 14)\n"
+      "🔍 Duplicados exactos encontrados: 29 / 3155\n",
+      "   Proporción: 0.92%\n",
+      "\n",
+      "✅ Dataset sin duplicados: (3126, 14)\n",
+      "   Eliminados: 29 registros\n",
+      "✅ Verificado: No hay duplicados restantes\n",
+      "\n",
+      "📋 Ejemplos de textos duplicados (mostrando primeros 3):\n",
+      "   1. acude sin cita para consulta de urgenca debido a que desde ayer esta en acude si...\n",
+      "   2. retira medicacio n 2 examen fisico gral. y ginecologico peso talla presion arter...\n",
+      "   3. acude a retirar medicacion acude a retirar medicacion reposicion de medicacion d...\n"
      ]
     }
    ],
    "source": [
     "# ---------------------------------------------------------------\n",
-    "# Duplicados\n",
+    "# Duplicados (CRÍTICO para comparabilidad de baselines)\n",
     "# ---------------------------------------------------------------\n",
-    "duplicates = df_raw.duplicated(subset=['text_clean'])\n",
-    "print(f\"Duplicados exactos: {duplicates.sum()} / {len(df_raw)}\")\n",
+    "# Eliminar duplicados exactos en texto limpio\n",
+    "duplicates = df_raw.duplicated(subset=['text_clean'], keep='first')\n",
+    "print(f\"🔍 Duplicados exactos encontrados: {duplicates.sum()} / {len(df_raw)}\")\n",
+    "print(f\"   Proporción: {100*duplicates.sum()/len(df_raw):.2f}%\")\n",
     "\n",
+    "# Mantener solo primera ocurrencia\n",
     "df_clean = df_raw[~duplicates].copy().reset_index(drop=True)\n",
-    "print(f\"Dataset sin duplicados: {df_clean.shape}\")\n"
+    "print(f\"\\n✅ Dataset sin duplicados: {df_clean.shape}\")\n",
+    "print(f\"   Eliminados: {len(df_raw) - len(df_clean)} registros\")\n",
+    "\n",
+    "# Verificación\n",
+    "if df_clean.duplicated(subset=['text_clean']).sum() > 0:\n",
+    "    print(\"⚠️ WARNING: Aún hay duplicados!\")\n",
+    "else:\n",
+    "    print(\"✅ Verificado: No hay duplicados restantes\")\n",
+    "\n",
+    "# Mostrar ejemplos de duplicados eliminados (opcional)\n",
+    "if duplicates.sum() > 0:\n",
+    "    print(\"\\n📋 Ejemplos de textos duplicados (mostrando primeros 3):\")\n",
+    "    dup_texts = df_raw[duplicates]['text_clean'].head(3).tolist()\n",
+    "    for i, txt in enumerate(dup_texts, 1):\n",
+    "        print(f\"   {i}. {txt[:80]}...\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "id": "b89fd726",
    "metadata": {},
    "outputs": [
@@ -619,7 +645,7 @@
        "4  reposicion segun indicaciones de tratante 2 examen fisico gral. y ginecologico peso talla presion arterial pulso tem...  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "id": "ec22dc3a",
    "metadata": {},
    "outputs": [
@@ -684,8 +710,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3cdf07a",
+   "metadata": {},
+   "source": [
+    "## Exportar dataset limpio para baselines"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
+   "id": "bd3de6ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Dataset limpio exportado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/ips_clean.csv\n",
+      "   Filas originales: 3155\n",
+      "   Duplicados eliminados: 29\n",
+      "   Filas finales: 3126\n",
+      "\n",
+      "📊 Distribución final:\n",
+      "etiqueta\n",
+      "depresion    2201\n",
+      "ansiedad      925\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "🔒 Este archivo será usado por 02_create_splits.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ---------------------------------------------------------------\n",
+    "# Exportar ips_clean.csv para uso en baselines\n",
+    "# ---------------------------------------------------------------\n",
+    "# Este dataset limpio será el INPUT para 02_create_splits.ipynb\n",
+    "# Garantiza que todos los baselines partan del mismo dataset sin duplicados\n",
+    "\n",
+    "CLEAN_FILE = DATA_PATH / \"ips_clean.csv\"\n",
+    "df_final.to_csv(CLEAN_FILE, index=False, encoding='utf-8')\n",
+    "\n",
+    "print(f\"✅ Dataset limpio exportado: {CLEAN_FILE}\")\n",
+    "print(f\"   Filas originales: {len(df_raw)}\")\n",
+    "print(f\"   Duplicados eliminados: {duplicates.sum()}\")\n",
+    "print(f\"   Filas finales: {len(df_final)}\")\n",
+    "print(f\"\\n📊 Distribución final:\")\n",
+    "print(df_final['etiqueta'].value_counts())\n",
+    "print(f\"\\n🔒 Este archivo será usado por 02_create_splits.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "9426ba0e",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "id": "2c38ca13",
    "metadata": {},
    "outputs": [
@@ -1140,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "id": "807fb6de",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "id": "5a3eae15",
    "metadata": {},
    "outputs": [
@@ -1387,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 16,
    "id": "a909c720",
    "metadata": {},
    "outputs": [
