--- a/notebooks/02_baseline_tfidf.ipynb
+++ b/notebooks/02_baseline_tfidf.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "361947b5",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📥 INPUT_FILE: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/ips_raw.csv\n"
+      "📁 DATA_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
+      "ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\n"
      ]
     }
    ],
@@ -44,14 +45,10 @@
     "FORK_PATH = Path(FORK_PATH) if 'FORK_PATH' in globals() else Path('Spanish_Psych_Phenotyping_PY')\n",
     "DATA_PATH.mkdir(exist_ok=True)\n",
     "\n",
+    "print(\"📁 DATA_PATH:\", DATA_PATH)\n",
+    "print(\"ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\")\n",
     "\n",
-    "INPUT_FILE   = DATA_PATH/'ips_raw.csv'\n",
-    "if not INPUT_FILE.exists():\n",
-    "    raise FileNotFoundError(\"No se encontró ni ips_clean.csv ni ips_raw.csv en \" + str(DATA_PATH))\n",
-    "\n",
-    "print(\"📥 INPUT_FILE:\", INPUT_FILE)\n",
-    "\n",
-    "# --- Columnas reales de tu dataset ---\n",
+    "# --- Columnas esperadas en dataset_base.csv ---\n",
     "TEXT_COL = \"texto\"\n",
     "LABEL_COL = \"etiqueta\"\n",
     "\n",
@@ -92,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "56fb4499",
    "metadata": {},
    "outputs": [
@@ -100,25 +97,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Splits cargados: Train=2518 | Val=630\n",
+      "✅ Splits cargados: Train=2500 | Val=625\n",
       "Train distribución:\n",
-      "Tipo\n",
-      "depresion    1778\n",
+      "etiqueta\n",
+      "depresion    1760\n",
       "ansiedad      740\n",
       "Name: count, dtype: int64\n",
       "Val distribución:\n",
-      "Tipo\n",
-      "depresion    445\n",
+      "etiqueta\n",
+      "depresion    440\n",
       "ansiedad     185\n",
       "Name: count, dtype: int64\n",
       "Train distribución:\n",
-      "Tipo\n",
-      "depresion    1778\n",
+      "etiqueta\n",
+      "depresion    1760\n",
       "ansiedad      740\n",
       "Name: count, dtype: int64\n",
       "Val distribución:\n",
-      "Tipo\n",
-      "depresion    445\n",
+      "etiqueta\n",
+      "depresion    440\n",
       "ansiedad     185\n",
       "Name: count, dtype: int64\n"
      ]
@@ -173,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "53508f46",
    "metadata": {},
    "outputs": [
@@ -217,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "921cc305",
    "metadata": {},
    "outputs": [
