--- a/notebooks/02_baseline_rule_based.ipynb
+++ b/notebooks/02_baseline_rule_based.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "75c9b111",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📥 INPUT_FILE: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/ips_raw.csv\n"
+      "📁 DATA_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
+      "📁 FORK_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/Spanish_Psych_Phenotyping_PY\n",
+      "ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\n"
      ]
     }
    ],
@@ -49,14 +51,11 @@
     "FORK_PATH = Path(FORK_PATH) if 'FORK_PATH' in globals() else Path('Spanish_Psych_Phenotyping_PY')\n",
     "DATA_PATH.mkdir(exist_ok=True)\n",
     "\n",
+    "print(\"📁 DATA_PATH:\", DATA_PATH)\n",
+    "print(\"📁 FORK_PATH:\", FORK_PATH)\n",
+    "print(\"ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\")\n",
     "\n",
-    "INPUT_FILE   = DATA_PATH/'ips_raw.csv'\n",
-    "if not INPUT_FILE.exists():\n",
-    "    raise FileNotFoundError(\"No se encontró ni ips_clean.csv ni ips_raw.csv en \" + str(DATA_PATH))\n",
-    "\n",
-    "print(\"📥 INPUT_FILE:\", INPUT_FILE)\n",
-    "\n",
-    "# --- Columnas reales de tu dataset ---\n",
+    "# --- Columnas esperadas en dataset_base.csv ---\n",
     "TEXT_COL = \"texto\"\n",
     "LABEL_COL = \"etiqueta\"\n",
     "\n",
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "489012c1",
    "metadata": {},
    "outputs": [
@@ -105,25 +104,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Splits cargados: Train=2518 | Val=630\n",
+      "✅ Splits cargados: Train=2500 | Val=625\n",
       "Train distribución:\n",
-      "Tipo\n",
-      "depresion    1778\n",
+      "etiqueta\n",
+      "depresion    1760\n",
       "ansiedad      740\n",
       "Name: count, dtype: int64\n",
       "Val distribución:\n",
-      "Tipo\n",
-      "depresion    445\n",
+      "etiqueta\n",
+      "depresion    440\n",
       "ansiedad     185\n",
       "Name: count, dtype: int64\n",
       "Train distribución:\n",
-      "Tipo\n",
-      "depresion    1778\n",
+      "etiqueta\n",
+      "depresion    1760\n",
       "ansiedad      740\n",
       "Name: count, dtype: int64\n",
       "Val distribución:\n",
-      "Tipo\n",
-      "depresion    445\n",
+      "etiqueta\n",
+      "depresion    440\n",
       "ansiedad     185\n",
       "Name: count, dtype: int64\n"
      ]
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "0b09ee4c",
    "metadata": {},
    "outputs": [
@@ -193,7 +192,7 @@
       "Concepts included (by folder): Ansiedad, Depresion\n",
       "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
       "Total target rules added: 229\n",
-      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=630\n",
+      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=625\n",
       "\n",
       "Components in NLP pipeline:\n",
       "\t- tok2vec\n",
@@ -206,7 +205,7 @@
       "Concepts included (by folder): Ansiedad, Depresion\n",
       "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
       "Total target rules added: 229\n",
-      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=630\n",
+      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=625\n",
       "\n"
      ]
     }
@@ -268,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "84dbc18f",
    "metadata": {},
    "outputs": [
