--- a/notebooks/02_baseline_transformer_beto.ipynb
+++ b/notebooks/02_baseline_transformer_beto.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "3bb438c5",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📥 INPUT_FILE: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/ips_raw.csv\n"
+      "📁 DATA_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
+      "ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\n"
      ]
     }
    ],
@@ -44,14 +45,10 @@
     "FORK_PATH = Path(FORK_PATH) if 'FORK_PATH' in globals() else Path('Spanish_Psych_Phenotyping_PY')\n",
     "DATA_PATH.mkdir(exist_ok=True)\n",
     "\n",
+    "print(\"📁 DATA_PATH:\", DATA_PATH)\n",
+    "print(\"ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\")\n",
     "\n",
-    "INPUT_FILE   = DATA_PATH/'ips_raw.csv'\n",
-    "if not INPUT_FILE.exists():\n",
-    "    raise FileNotFoundError(\"No se encontró ni ips_clean.csv ni ips_raw.csv en \" + str(DATA_PATH))\n",
-    "\n",
-    "print(\"📥 INPUT_FILE:\", INPUT_FILE)\n",
-    "\n",
-    "# --- Columnas reales de tu dataset ---\n",
+    "# --- Columnas esperadas en dataset_base.csv ---\n",
     "TEXT_COL = \"texto\"\n",
     "LABEL_COL = \"etiqueta\"\n",
     "\n",
@@ -92,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "a7a50745",
    "metadata": {},
    "outputs": [
@@ -100,27 +97,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Splits cargados: Train=2518 | Val=630\n",
-      "Train: 2518 | Val: 630\n",
+      "✅ Splits cargados: Train=2500 | Val=625\n",
+      "Train: 2500 | Val: 625\n",
       "Train distribución:\n",
       "label\n",
-      "0    1778\n",
+      "0    1760\n",
       "1     740\n",
       "Name: count, dtype: int64\n",
       "Val distribución:\n",
       "label\n",
-      "0    445\n",
+      "0    440\n",
       "1    185\n",
       "Name: count, dtype: int64\n",
-      "Train: 2518 | Val: 630\n",
+      "Train: 2500 | Val: 625\n",
       "Train distribución:\n",
       "label\n",
-      "0    1778\n",
+      "0    1760\n",
       "1     740\n",
       "Name: count, dtype: int64\n",
       "Val distribución:\n",
       "label\n",
-      "0    445\n",
+      "0    440\n",
       "1    185\n",
       "Name: count, dtype: int64\n"
      ]
@@ -173,19 +170,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "6298d69f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "987fef2fae6f4109af42fa3ca6fb0cb1",
+       "model_id": "cd95429d22424b9591350792465fba6d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/2518 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/2500 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -194,12 +191,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7fcc9ead7094246bd058a84128826a8",
+       "model_id": "140e184e9dc1461ba21f6720a0ff3a0f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/630 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/625 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -232,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "330e270a",
    "metadata": {},
    "outputs": [
@@ -254,8 +251,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='474' max='474' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [474/474 08:21, Epoch 3/3]\n",
+       "      <progress value='471' max='471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [471/471 08:29, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -271,27 +268,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.367800</td>\n",
-       "      <td>0.311753</td>\n",
-       "      <td>0.807470</td>\n",
-       "      <td>0.865743</td>\n",
-       "      <td>0.780443</td>\n",
+       "      <td>0.288600</td>\n",
+       "      <td>0.270351</td>\n",
+       "      <td>0.849325</td>\n",
+       "      <td>0.851619</td>\n",
+       "      <td>0.847144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.264700</td>\n",
-       "      <td>0.292184</td>\n",
-       "      <td>0.852454</td>\n",
-       "      <td>0.853017</td>\n",
-       "      <td>0.851898</td>\n",
+       "      <td>0.195900</td>\n",
+       "      <td>0.292822</td>\n",
+       "      <td>0.855089</td>\n",
+       "      <td>0.876518</td>\n",
+       "      <td>0.839865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.136600</td>\n",
-       "      <td>0.315057</td>\n",
-       "      <td>0.855857</td>\n",
-       "      <td>0.869106</td>\n",
-       "      <td>0.845339</td>\n",
+       "      <td>0.117500</td>\n",
+       "      <td>0.332661</td>\n",
+       "      <td>0.878105</td>\n",
+       "      <td>0.881242</td>\n",
+       "      <td>0.875154</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -387,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "6178f168",
    "metadata": {},
    "outputs": [
