--- a/notebooks/02_create_splits.ipynb
+++ b/notebooks/02_create_splits.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0786bf53",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📥 INPUT_FILE: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/ips_raw.csv\n",
+      "📥 INPUT_FILE: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/ips_clean.csv\n",
       "📁 SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
      ]
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fa153f4c",
    "metadata": {},
    "outputs": [
@@ -78,10 +78,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dataset cargado: 3148 ejemplos\n",
+      "✅ Dataset cargado: 3125 ejemplos\n",
       "Distribución:\n",
-      "Tipo\n",
-      "depresion    2223\n",
+      "etiqueta\n",
+      "depresion    2200\n",
       "ansiedad      925\n",
       "Name: count, dtype: int64\n"
      ]
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "fe464a45",
    "metadata": {},
    "outputs": [
@@ -161,15 +161,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: 2518 | Val: 630\n",
+      "Train: 2500 | Val: 625\n",
       "Train distribución:\n",
-      "Tipo\n",
-      "depresion    1778\n",
+      "etiqueta\n",
+      "depresion    1760\n",
       "ansiedad      740\n",
       "Name: count, dtype: int64\n",
       "Val distribución:\n",
-      "Tipo\n",
-      "depresion    445\n",
+      "etiqueta\n",
+      "depresion    440\n",
       "ansiedad     185\n",
       "Name: count, dtype: int64\n"
      ]
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dc033898",
    "metadata": {},
    "outputs": [
@@ -215,6 +215,7 @@
       " - /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/val_indices.csv\n",
       " - /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/dataset_base.csv\n",
       "\n",
+      "📊 Origen: ips_clean.csv\n",
       "🔒 Ahora todos los baselines deben usar estos splits.\n"
      ]
     }
